--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body { font-family: monospace; width: 300px; margin: auto; }
+body { font-family: monospace; width: 58mm; margin: auto; }
 h2, p { text-align: center; margin: 0; }
 table { width:100%; margin:10px 0; border-collapse: collapse; }
 td { font-size:12px; padding:2px 0; }
